<resources>
    <string name="app_name">SHD</string>
    <string name="welcome_back">WELCOME BACK!</string>
    <string name="see_you_again">Happy to see you again.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="empty_email_error">Enter The email id</string>
    <string name="invalid_email_error">Wrong email id</string>
    <string name="internet_error">Check Internet Connection.</string>
    <string name="empty_password_error">Enter Password</string>
    <string name="invalid_password_error">Wrong Password</string>
    <string name="other_error">Some Thing was Wrong please try again</string>
    <string name="reset_password_email">Reset Password Email Send</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_page_img">Login page img</string>
    <string name="request_pass_string">Request to reset your password. Please provide a valid email to initiate the reset process via email confirmation.</string>
    <string name="send">Send</string>
    <string name="add_jewellery_tab_form">FORM</string>
    <string name="add_jewellery_tab_excel">EXCEL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_edit_icon">img_edit_icon</string>
    <string name="design_code">Design Code :</string>
    <string name="shd_design_code">Enter Design Code</string>
    <string name="status">Status</string>
    <string name="customer_name">Customer Name :</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="work_by">Work By :</string>
    <string name="work_by_text">SHD</string>
    <string name="work_place_text">SHD office</string>
    <string name="slider_error1">Only 0.00 to 100.00 number Allow</string>
    <string name="slider_error2">Only 2 Decimal Allow</string>
    <string name="jewellery_types">Jewellery Types :</string>
    <string name="select_jewellery">Jewellery</string>
    <string name="select_sub_type">Sub type</string>
    <string name="gold_gm">Gold (gm) :</string>
    <string name="form_starting_number">0.00</string>
    <string name="slide">slide</string>
    <string name="diamond_text">Diamond (Carat):</string>
    <string name="length">Length (mm) :</string>
    <string name="width">Width (mm) :</string>
    <string name="height">Height (mm) :</string>
    <string name="save">SAVE</string>
    <string name="customer_code">Customer Code :</string>
    <string name="enter_customer_code">Enter Customer Code</string>
    <string name="temp_code">Temp Code :</string>
    <string name="enter_temp_code">Enter temp code</string>
    <string name="cancel">Cancel</string>
    <string name="small_design_code">Enter minimum 5 charter Design Code </string>
    <string name="small_customer_code">Enter minimum 5 charter customer Code </string>
    <string name="small_temp_code">Enter minimum 5 charter temp Code </string>
    <string name="required_temp_code">Temp Code Required</string>
    <string name="exits_temp_code">Temp Code already exits</string>
    <string name="exits_design_code">Design Code already exits</string>
    <string name="sub_type">Sub Type</string>
    <string name="processing">Processing</string>
    <string name="warning">Warning</string>
    <string name="successfully">Successfully</string>
    <string name="Design_Img_Not_Stored">Design Img Not Stored</string>
    <string name="Design_Not_Stored">Design Img Not Stored</string>
    <string name="Design_Stored_Successfully">Design Stored Successfully</string>
    <string name="excel_file_read_error">Excel file not read properly Please check  excel file… </string>
    <string name="profile_tab_emp">EMPLOYEES</string>
    <string name="profile_tab_customer">CUSTOMER</string>
    <string name="design">Design</string>
    <string name="design_img">Design img</string>
    <string name="update">UPDATE</string>
    <string name="do_not_cancel">Do not Cancel the Process..</string>
    <string name="delete">DELETE</string>
    <string name="search">Search</string>
    <string name="more_menu">More menu</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="select">Select</string>
    <string name="total_design_count">Total number of Design : </string>
    <string name="total_error_count">Total Error Files :</string>
    <string name="one_more_time">one more time if you wont to exit</string>
    <string name="design_have_error">Design Have Errors..</string>
    <string name="empty_design_set">NO Design To have StoreM</string>
    <string name="home">Home</string>
    <string name="jewellery">Jewellery</string>
    <string name="users">Users</string>
    <string name="upload">Upload</string>
    <string name="select_excel_file">Select Excel File</string>
    <string name="file">File</string>
    <string name="shimmer_button">shimmer button</string>
    <string name="search_design">Search Design</string>
    <string name="filter">Filter</string>
    <string name="start_code">Start Code</string>
    <string name="end_code">End Code</string>
    <string name="only_photos">Only Photos</string>
    <string name="to">TO</string>
    <string name="gold_range_slider">gold range slider</string>
    <string name="diamond_range_slider">Diamond range slider</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="remove_filter">Remove Filter</string>


    <string-array name="jewellery_main_type">
        <item>Ring</item>
        <item>NKC</item>
        <item>ER</item>
        <item>BR</item>
        <item>PND</item>
        <item>BA</item>
        <item>MS</item>
        <item>NP</item>
        <item>PDSet</item>

    </string-array>

    <string-array name="jewellery_ring_sub_type">
        <item>GR</item>
        <item>LR</item>
        <item>Bend</item>
        <item>Couple Ring</item>
        <item>Cocktail Ring</item>
    </string-array>

    <string-array name="jewellery_nkc_sub_type">
        <item>Tenis</item>
        <item>Regular</item>
    </string-array>

    <string-array name="jewellery_er_sub_type">
        <item>Bail</item>
        <item>Tops</item>
        <item>Stud</item>
        <item>Long ER</item>
        <item>Jumkhi</item>
    </string-array>

    <string-array name="jewellery_br_sub_type">
        <item>Lose</item>
        <item>Tenis</item>
        <item>Kada</item>
    </string-array>

    <array name="range_slider_default_value">
        <item>0.0</item>
        <item>0.0</item>
    </array>

</resources>