<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/select_mark"
        android:iconTint="@color/colorPrimaryText"
        android:contentDescription="@string/select"
        android:title="@string/select"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:icon="@drawable/download"
        android:iconTint="@color/colorPrimaryText"
        android:contentDescription="@string/download"
        android:title="@string/download"
        app:showAsAction="always"
    />

    <item
        android:icon="@drawable/share"
        android:iconTint="@color/colorPrimaryText"
        android:contentDescription="@string/share"
        android:title="@string/share"
        app:showAsAction="always"
        />

    <item android:id="@+id/more_menu"
        android:icon="@drawable/more"
        android:iconTint="@color/colorPrimaryText"
        android:contentDescription="@string/more_menu"
        android:title="@string/more_menu"
        app:showAsAction="always"
        />



</menu>