<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/home_icon"
        android:icon="@drawable/home"
        android:iconTint="@color/colorPrimaryText"
        android:contentDescription="@string/home"
        android:enabled="true"
        android:title="@string/home"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"
        app:cnb_iconColor="@color/colorPrimaryBackground"
        app:cnb_backgroundColor="@color/colorPrimaryButton"/>

    <item android:id="@+id/jewellery_icon"
        android:icon="@drawable/jewellery"
        android:iconTint="@color/colorPrimaryText"
        android:enabled="true"
        android:contentDescription="@string/jewellery"
        android:title="@string/jewellery"
        app:showAsAction="always"
        app:cnb_iconColor="@color/colorPrimaryBackground"
        app:cnb_backgroundColor="@color/colorPrimaryButton"
        />

    <item android:id="@+id/search_icon"
        android:icon="@drawable/search"
        android:enabled="true"
        android:iconTint="@color/colorPrimaryText"
        android:contentDescription="@string/search"
        android:title="@string/search"
        app:showAsAction="always"
        app:cnb_iconColor="@color/colorPrimaryBackground"
        app:cnb_backgroundColor="@color/colorPrimaryButton"
        />

    <item android:id="@+id/upload_icon"
        android:icon="@drawable/upload"
        android:enabled="true"
        android:iconTint="@color/colorPrimaryText"
        android:contentDescription="@string/upload"
        android:title="@string/upload"
        app:showAsAction="always"
        app:cnb_iconColor="@color/colorPrimaryBackground"
        app:cnb_backgroundColor="@color/colorPrimaryButton"
        />

    <item android:id="@+id/add_user_icon"
        android:icon="@drawable/add_user"
        android:enabled="true"
        android:iconTint="@color/colorPrimaryText"
        android:contentDescription="@string/users"
        android:title="@string/users"
        app:showAsAction="always"
        app:cnb_iconColor="@color/colorPrimaryBackground"
        app:cnb_backgroundColor="@color/colorPrimaryButton"
        />
</menu>
