<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.login.ResetPassword"
    android:background="@color/app_color">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/appbar_layout"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appbar"
            >

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/appbar_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?actionBarSize"
                app:title="Reset Password"
                style="@style/Theme.SHD.Login.AppBar"
                app:layout_scrollEffect="compress"
                />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >
            <TextView
                android:id="@+id/rest_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="15dp"
                android:elegantTextHeight="true"
                android:textIsSelectable="false"
                style="@style/Theme.SHD.Login.TextButton"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/request_pass_string"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/conform_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeErrorColor="@color/error"
                app:boxStrokeWidth="3dp"
                app:hintTextColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/rest_msg"
                app:startIconDrawable="@drawable/email"
                app:startIconTint="@color/black"
                app:errorTextColor="@color/error"
                app:errorIconTint="@color/error"
                app:cursorColor="@color/black"
                app:cursorErrorColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/conform_email_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/send_button"
                style="@style/Theme.SHD.Login.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/conform_email_layout"
                android:elevation="16dp"
                android:stateListAnimator="@null"
                tools:ignore="VisualLintButtonSize" />

            <TextView
                android:id="@+id/error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/error"
                app:layout_constraintTop_toBottomOf="@id/send_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Theme.SHD.Login.TextButton"
                android:visibility="gone"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>