<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        style="?attr/materialCardViewElevatedStyle"
        app:strokeColor="@color/cv_stroke_color"
        app:strokeWidth="1.5dp"
        app:cardElevation="7dp"
        app:cardBackgroundColor="@color/cv_bg_color">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal">

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="wrap_content"
               android:layout_height="match_parent">

               <com.google.android.material.imageview.ShapeableImageView
                   android:id="@+id/card_img1"
                   android:layout_width="70dp"
                   android:layout_height="70dp"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintBottom_toTopOf="@id/card_img2"
                   app:layout_constraintEnd_toEndOf="parent"
                   android:src="@drawable/default_img"
                   android:layout_margin="10dp"
                   android:scaleType="fitXY"
                   android:contentDescription="@string/design_img"/>

               <com.google.android.material.imageview.ShapeableImageView
                   android:id="@+id/card_img2"
                   android:layout_width="70dp"
                   android:layout_height="70dp"
                   android:layout_margin="10dp"
                   app:layout_constraintTop_toBottomOf="@id/card_img1"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   android:src="@drawable/default_img"
                   android:scaleType="fitXY"
                   android:contentDescription="@string/design_img"/>
           </androidx.constraintlayout.widget.ConstraintLayout>

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_marginVertical="10dp"
               android:layout_marginEnd="10dp">

               <com.google.android.material.textview.MaterialTextView
                   android:id="@+id/card_company_name_text"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   style="@style/Theme.SHD.Text"
                   android:textColor="@color/cv_text_color"

                  />

               <com.google.android.material.imageview.ShapeableImageView
                   android:id="@+id/card_status_img"
                   android:layout_width="25dp"
                   android:layout_height="25dp"
                   android:src="@drawable/default_img"
                   app:layout_constraintTop_toTopOf="@id/card_deign_code_text"
                   app:layout_constraintEnd_toEndOf="@id/card_deign_code_text"
                   app:layout_constraintBottom_toBottomOf="@id/card_deign_code_text"
                   android:layout_marginEnd="15dp"
                   android:contentDescription="@string/status"
                   android:padding="5dp"/>

               <com.google.android.material.textview.MaterialTextView
                   android:id="@+id/card_deign_code_text"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@id/card_company_name_text"
                   android:layout_marginTop="5dp"
                   style="@style/Theme.SHD.card.Text"
                   android:textColor="@color/cv_text_color"
                   android:background="@drawable/card_view_text_border"
                   android:padding="5dp"
                   android:paddingHorizontal="5dp"
                  />

               <com.google.android.material.textview.MaterialTextView
                   android:id="@+id/card_jw_type"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@id/card_deign_code_text"
                   android:layout_marginTop="5dp"
                   style="@style/Theme.SHD.card.Text"
                   android:textColor="@color/cv_text_color"
                   android:background="@drawable/card_view_text_border"
                   android:padding="5dp"
                   android:paddingHorizontal="5dp"/>

               <com.google.android.material.textview.MaterialTextView
                   android:id="@+id/card_date"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@id/card_jw_type"
                   android:layout_marginTop="5dp"
                   style="@style/Theme.SHD.card.Text"
                   android:textColor="@color/cv_text_color"
                   android:background="@drawable/card_view_text_border"
                   android:padding="5dp"
                   android:paddingHorizontal="5dp"/>
                   
               <Button
                   android:id="@+id/card_delete_button"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:layout_constraintTop_toBottomOf="@id/card_date"
                   android:layout_marginTop="5dp"
                   app:layout_constraintStart_toStartOf="parent"
                   style="@style/Widget.Material3.Button.OutlinedButton"
                   android:text="@string/delete"
                   android:textColor="@color/cv_cancel_text_color"
                   app:layout_constraintEnd_toStartOf="@id/card_update_button"
                   />

               <Button
                   android:id="@+id/card_update_button"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:layout_constraintTop_toBottomOf="@id/card_date"
                   android:layout_marginTop="5dp"
                   app:layout_constraintStart_toEndOf="@id/card_delete_button"
                   app:layout_constraintEnd_toEndOf="parent"
                   android:text="@string/update"
                   android:textSize="17sp"
                   android:backgroundTint="@color/cv_update_bg_color"
                   android:fontFamily="@font/poppins_regular"
                   android:textColor="@color/cv_text_color" />

           </androidx.constraintlayout.widget.ConstraintLayout>
       </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>